<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="repository"
            type="com.cristianboicu.githubclient.data.model.GhRepository" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium_value">

        <TextView
            android:id="@+id/tv_repository_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_repository_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setRepositoryTitle="@{repository}" />

        <TextView
            android:id="@+id/tv_repository_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_value"
            android:background="@drawable/repository_item_bg"
            android:paddingHorizontal="@dimen/small_value"
            android:paddingVertical="@dimen/medium_value"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_repository_title"
            app:setRepositoryContent="@{repository}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
