...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big_value"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_github_username"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <Button
            android:id="@+id/btn_navigate_to_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.buttonEnabled.booleanValue()}"
            android:layout_marginHorizontal="@dimen/big_value"
            android:layout_marginVertical="@dimen/medium_value"
            android:onClick="@{() -> viewModel.showRepositoriesTriggered(etUsername.getText().toString())}"
...
